# models/media_model.go
@@ -7,5 +7,7 @@ type Media struct {
 	FileName   string             `bson:"file_name" json:"file_name"`
 	FilePath   string             `bson:"file_path" json:"file_path"`
 	FileType   string             `bson:"file_type" json:"file_type"`
+	FileSize   int64              `json:"file_size" example:"102400"`
 	UploadedAt int64              `bson:"uploaded_at" json:"uploaded_at"`
+	UploadedBy string             `json:"uploaded_by" example:"admin"`
 }
